resources/bookinfo-service-gateway.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: productpage
  name: productpage-service-gateway
spec:
  host: productpage.apps.cluster-cf61.cf61.sandbox235.opentlc.com
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
